# perfect_dark_pc

./: .gitignore  README.md
include/PR/: gbi.h  os_convert.h  os_libc.h
pc/: CMakeLists.txt  byteswap.c  byteswap.h  debugvars.c  debugvars.h  main.c  native_functions.h  notes.md  offsetsmap.c  offsetsmap.h  print.c  print.h  rom.c  rom.h  rzip.c  stubs.h  va_list.h
pc/assets/: AssetConverter.cpp  AssetConverter.h
pc/gfx/: gbi_addon.c  gbi_addon.h  gfxpc.c  gfxpc.h  hashmap.c
pc/imgui/backends/: imgui_impl_sdl2.cpp
pc/shaders/: frag.glsl  vert.glsl
pc/tools/: genCmakeFileLists.js
pc/ultra/: gfx.h  ultra64.c  ultra64_stub.h
src/game/: bg.c  bondgun.c  bossfile.c  challenge.c  cheats.c  chr.c  chrai.c  dlights.c  file.c  game_13c510.c  game_1531a0.c  game_176080.c  getitle.c  gfxmemory.c  hudmsg.c  lang.c  lv.c  modeldef.c  modelmgrreset.c  music.c  objectives.c  pad.c  propobj.c  propobjstop.c  proptick.c  race.c  raceinit.c  setup.c  setuppads.c  setuputils.c  sky.c  stagemusic.c  stars.c  tex.c  texdecompress.c  texinit.c  texreset.c  texselect.c  tilesreset.c  timing.c  (+3 more)
src/game/mplayer/: mplayer.c
src/include/: constants.h  gbiex.h  gunscript.h  types.h
src/include/game/: bondgun.h  file.h  game_1531a0.h  modeldef.h  setuputils.h  texdecompress.h
src/include/inflate/: inflate.h
src/include/lib/: mema.h  model.h  mtx.h  sched_lib_pd.h  str.h
src/inflate/: inflate.c
src/lib/: anim.c  args.c  audiomgr.c  boot.c  crash.c  dma.c  fault.c  joy.c  main.c  mema.c  memp.c  model.c  mp3.c  mtx_c.c  music.c  rdp.c  rmon.c  sched.c  snd.c  str.c  vi.c  vm.c
src/lib/naudio/: n_event.c  n_load.c
tools/: extract
